--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name=".ui.main.ProfileActivity"
+            android:launchMode="singleTop"
             android:label="@string/profile_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
